--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
       <button type="button" class="restart-btn">Restart</button>
     </header>
     <div id="winning" class="hide">
-      <h2 class="win-message">Player</h2>
+      <h2 class="player-message">Player X turns</h2>
     </div>
     <section class="grid-section">
       <div class="container">
-        <div id="0" class="squares"><p class="sq-0"></p></div>
-        <div id="1" class="squares"><p class="sq-1"></p></div>
-        <div id="2" class="squares"><p class="sq-2"></p></div>
-        <div id="3" class="squares"><p class="sq-3"></p></div>
-        <div id="4" class="squares"><p class="sq-4"></p></div>
-        <div id="5" class="squares"><p class="sq-5"></p></div>
-        <div id="6" class="squares"><p class="sq-6"></p></div>
-        <div id="7" class="squares"><p class="sq-7"></p></div>
-        <div id="8" class="squares"><p class="sq-8"></p></div>
+        <div id="id0" class="squares"><p class="sq-0"></p></div>
+        <div id="id1" class="squares"><p class="sq-1"></p></div>
+        <div id="id2" class="squares"><p class="sq-2"></p></div>
+        <div id="id3" class="squares"><p class="sq-3"></p></div>
+        <div id="id4" class="squares"><p class="sq-4"></p></div>
+        <div id="id5" class="squares"><p class="sq-5"></p></div>
+        <div id="id6" class="squares"><p class="sq-6"></p></div>
+        <div id="id7" class="squares"><p class="sq-7"></p></div>
+        <div id="id8" class="squares"><p class="sq-8"></p></div>
       </div>
     </section>
     <footer>
