Added draw function. Refactoring.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button type="button" class="restart-btn">Restart</button>
     </header>
     <div id="winning" class="hide">
-      <h2 class="player-message">Player X turns</h2>
+      <h2 class="player-message">Player X turn</h2>
     </div>
     <section class="grid-section">
       <div class="container">
